kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tradiumapp
  labels:
    app: tradiumapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  selector:
    app: tradiumapp
    app.kubernetes.io/name: tradiumapp
  ports:
  - name: web
    port: 80
    targetPort: 3000
    protocol: TCP
  clusterIP: 172.20.0.12
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
